GearsetPOC/force-app/main/default/objects/COVID_Logic_Rules__c/COVID_Logic_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>COVID Logic Rules</label>
</CustomObject>