GearsetPOC/force-app/main/default/objects/COVID_Logic_Rules__c/fields/Cancelled_Trains_Scope_Begin__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Trains_Scope_Begin__c</fullName>
    <label>Cancelled Trains Scope Begin</label>
    <type>Date</type>
</CustomField>