GearsetPOC/force-app/main/default/objects/COVID_Logic_Rules__c/fields/Disney_Journeys_Scope_Begin__c.field-meta.xml
<CustomField>
    <fullName>Disney_Journeys_Scope_Begin__c</fullName>
    <label>Disney Journeys Scope Begin</label>
    <type>Date</type>
</CustomField>