GearsetPOC/force-app/main/default/objects/COVID_Logic_Rules__c/fields/General_Journeys_Scope_Begin__c.field-meta.xml
<CustomField>
    <fullName>General_Journeys_Scope_Begin__c</fullName>
    <label>General Journeys Scope Begin</label>
    <type>Date</type>
</CustomField>