GearsetPOC/force-app/main/default/objects/COVID_Logic_Rules__c/fields/Package_Journeys_Scope_End__c.field-meta.xml
<CustomField>
    <fullName>Package_Journeys_Scope_End__c</fullName>
    <label>Package Journeys Scope End</label>
    <type>Date</type>
</CustomField>