GearsetPOC/force-app/main/default/objects/COVID_Logic_Rules__c/fields/Policy_Threshold_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Threshold_Date__c</fullName>
    <label>Policy Threshold Date</label>
    <type>Date</type>
</CustomField>