GearsetPOC/force-app/main/default/objects/COVID_Logic_Rules__c/fields/Ski_Journeys_Scope_End__c.field-meta.xml
<CustomField>
    <fullName>Ski_Journeys_Scope_End__c</fullName>
    <label>Ski Journeys Scope End</label>
    <type>Date</type>
</CustomField>